
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "segment_anything_volumetric"
version = "0.0.1"
description = "nDPId consumer implementation"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]


[project.urls]
"Homepage" = "https://github.com/BAAI-DCAI/SegVol"
"Bug Tracker" = "https://github.com/BAAI-DCAI/SegVol/issues"